--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </p>
 </div>
 
-<button id="counterButton">0/20</button>
+<div id="counterContainer">
+  <button id="counterButton">0/20</button>
+</div>
 
 <script src="script.js"></script>
 
