--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Teller</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Interactive Story</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -13,6 +13,13 @@
     The war has finally ended, but your family is dead. Your city has burned to the ground, and you fled to a nearby small village.
     You find yourself begging on the street.
   </p>
+</div>
+
+<div id="inventoryBox">
+  <h2>Inventory</h2>
+  <ul>
+    <li>Small Wallet</li>
+  </ul>
 </div>
 
 <div id="counterContainer">
