--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
 
 <div id="contentContainer">
-  <div id="storyBox">
-    <p>
-      The war has finally ended, but your family is dead. Your city has burned to the ground, and you fled to a nearby small village.
-      You find yourself begging on the street.
-    </p>
+  <div id="storyContainer">
+    <div id="storyBox">
+      <p>
+        The war has finally ended, but your family is dead. Your city has burned to the ground, and you fled to a nearby small village.
+        You find yourself begging on the street.
+      </p>
+    </div>
+
+    <div id="counterContainer">
+      <button id="counterButton">0/20</button>
+    </div>
   </div>
 
   <div id="inventoryBox">
@@ -22,10 +28,6 @@
       <li>Small Wallet</li>
     </ul>
   </div>
-</div>
-
-<div id="counterContainer">
-  <button id="counterButton">0/20</button>
 </div>
 
 <script src="script.js"></script>
