--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Story</title>
+  <title>Astrum Umbra</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
