--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Story</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -30,9 +30,7 @@
 
   <div id="inventoryBox">
     <h2>Inventory</h2>
-    <ul>
-      <li id="smallWalletItem">Small Wallet</li>
-      <li id="smallDaggerItem">Small Dagger</li>
+    <ul id="inventoryList">
     </ul>
   </div>
 </div>
