--- a/index.html
+++ b/index.html
@@ -1,41 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Story</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Shadow Heist</title>
 </head>
 <body>
-
-<div id="contentContainer">
-  <div id="storyContainer">
-    <div id="storyBox">
-      <p>
-        The war has finally ended, but your family is dead. Your city has burned to the ground, and you fled to a nearby small village.
-        You find yourself begging on the street.
-      </p>
+    <div class="game-container">
+        <h1 id="income-display">$0</h1>
+        <button id="steal-button" onclick="generateIncome()">Steal</button>
+        <div id="inventory-container">
+            <h2>Inventory</h2>
+            <!-- Inventory items will be displayed here -->
+        </div>
+        <div id="shop-container">
+            <h2>Shop</h2>
+            <!-- Shop items will be displayed here -->
+        </div>
     </div>
 
-    <div id="counterContainer">
-      <button id="counterButton">0/20</button>
-    </div>
-
-    <div id="shopContainer">
-      <h2>Shop</h2>
-      <button id="buyMediumWallet" onclick="buyItem('mediumWallet', 20)">Buy Medium Wallet (Cost: 20 gold)</button>
-      <button id="buySmallDagger" onclick="buyItem('smallDagger', 50)">Buy Small Dagger (Cost: 50 gold)</button>
-    </div>
-  </div>
-
-  <div id="inventoryBox">
-    <h2>Inventory</h2>
-    <ul id="inventoryList">
-    </ul>
-  </div>
-</div>
-
-<script src="script.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
