--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="game-container">
-        <h1 id="income-display">$0</h1>
+        <h1 id="income-display">0 gold</h1>
         <button id="steal-button" onclick="generateIncome()">Steal</button>
         <div id="inventory-container">
             <h2>Inventory</h2>
