--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="game-container">
         <h1 id="income-display">0 gold</h1>
-        <button id="steal-button" onclick="generateIncome()">Steal</button>
+        <button id="steal-button" onclick="generateIncome()">Find lost coins in the village market</button>
         <div id="inventory-container">
             <h2>Inventory</h2>
             <!-- Inventory items will be displayed here -->
