--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Shadow Heist</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Stealthy Business</title>
 </head>
 <body>
-    <div class="game-container">
-        <h1 id="income-display">Gold: 0</h1>
-        <button id="steal-button" onclick="generateIncome()">Find lost coins in the village market</button>
-        <div id="inventory-container">
-            <h2>Inventory</h2>
-            <!-- Inventory items will be displayed here -->
-        </div>
-        <div id="shop-container">
-            <h2>Shop</h2>
-            <!-- Shop items will be displayed here -->
-        </div>
+  <div class="game-container">
+    <h1>Stealthy Business</h1>
+    <p>Coins: <span id="coins">0</span></p>
+    <p>Purse: <span id="purse">0</span>/20 coins</p>
+    <div class="inventory">
+      <h2>Inventory</h2>
+      <button id="apple-btn">Generate Apples</button>
     </div>
-
-    <script src="script.js"></script>
+    <div class="market">
+      <h2>Market</h2>
+      <button id="sell-btn">Sell Apples</button>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
