--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Stealthy Business</h1>
     <p>Coins: <span id="coins">0</span></p>
     <p>Purse: <span id="purse">0</span>/20 coins</p>
-    <div class="inventory">
+    <div class="inventory" id="inventory">
       <h2>Inventory</h2>
       <button id="apple-btn">Generate Apples</button>
     </div>
