--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Purse: <span id="purse">0</span>/20 coins</p>
     <div class="inventory" id="inventory">
       <h2>Inventory</h2>
-      <button id="apple-btn">Generate Apples</button>
+      <button id="apple-btn">Steal apples. It aint much, but its dishonest work.</button>
     </div>
     <div class="market">
       <h2>Market</h2>
