--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
   <h1>Astrum Umbra</h1>
   <p>War has been raging across the continent for years. <br> You have lost your family, and your hometown lays in ruins. <br> You have traveled to a nearby village to start a new life.</p>
 </body>
-</html>html>
+</html>
