--- a/index.html
+++ b/index.html
@@ -9,24 +9,14 @@
 <body>
   <h1>Astrum Umbra</h1>
   <p>War has been raging across the continent for years. <br> You have lost your family, and your hometown lays in ruins. <br> You have traveled to a nearby village to start a new life.</p>
-    <div id="mainView">
-        <button onclick="goToStore()">Go to the store</button>
-        <button onclick="goToTavern()">Go to the tavern</button>
-        <button onclick="goToCityHall()">Go to the city hall</button>
+     <div id="mainView">
+        <button onclick="changeContent('store')">Go to the store</button>
+        <button onclick="changeContent('tavern')">Go to the tavern</button>
+        <button onclick="changeContent('cityHall')">Go to the city hall</button>
     </div>
 
-    <div id="store" style="display: none;">
-        <h2>You are in the store!</h2>
-        <button onclick="goBack()">Go back to the main view</button>
-    </div>
-
-    <div id="tavern" style="display: none;">
-        <h2>You are in the tavern!</h2>
-        <button onclick="goBack()">Go back to the main view</button>
-    </div>
-
-    <div id="cityHall" style="display: none;">
-        <h2>You are in the city hall!</h2>
+    <div id="content" style="display: none;">
+        <!-- Content will be dynamically inserted here -->
         <button onclick="goBack()">Go back to the main view</button>
     </div>
 
