--- a/index.html
+++ b/index.html
@@ -2,31 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="witdth=device-width, initial-scale=1.0">
-  <title>Astrum Umbra</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thief's Adventure</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Astrum Umbra</h1>
-  <p>War has been raging across the continent for years. <br> You have lost your family, and your hometown lays in ruins. <br> You have traveled to a nearby village to start a new life.</p>
-      <div id="mainView">
-        <button onclick="changeContent('store')">Go to the store</button>
-        <button onclick="changeContent('tavern')">Go to the tavern</button>
-        <button onclick="changeContent('cityHall')">Go to the city hall</button>
-        <button onclick="showInventory()">Inventory</button>
-    </div>
 
-    <div id="content" style="display: none;">
-        <!-- Content will be dynamically inserted here -->
-        <button onclick="goBack()">Go back to the main view</button>
-    </div>
+<div id="game-container">
+  <h1>Thief's Adventure</h1>
+  <p>Welcome, brave thief! Your journey begins...</p>
 
-    <div id="inventory" style="display: none;">
-        <h2>Inventory</h2>
-        <ul id="itemList"></ul>
-        <button onclick="goBack()">Go back to the main view</button>
-    </div>
+  <button onclick="stealApples()">Steal Apples</button>
+  <button onclick="sellApples()">Sell Apples</button>
 
-    <script src="script.js"></script>
+  <div id="inventory">Inventory: <span id="apple-count">0</span> apples</div>
+  <div id="result"></div>
+
+  <script src="script.js"></script>
+</div>
+
 </body>
 </html>
