--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thief's Adventure</title>
+  <title>Astrum Umbra</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div id="game-container">
   <h1>Thief's Adventure</h1>
-  <p>Welcome, brave thief! Your journey begins...</p>
+  <p>It aint much, but its dishonest work.</p>
 
   <button onclick="stealApples()">Steal Apples</button>
   <button onclick="sellApples()">Sell Apples</button>
