--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="game-container">
-  <h1>Thief's Adventure</h1>
+  <h1>Astrum Umbra</h1>
   <p>It aint much, but its dishonest work.</p>
 
   <button onclick="stealApples()">Steal Apples</button>
