--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <button onclick="stealApples()">Steal Apples</button>
   <button onclick="sellApples()">Sell Apples</button>
 
-  <div id="inventory">Inventory: <span id="apple-count">0</span> apples</div>
+  <div id="inventory">Inventory: <span id="apple-count">0</span> apples, Gold: <span id="gold-count">0</span></div>
   <div id="result"></div>
 
   <script src="script.js"></script>
