--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Astrum Umbra</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <title>Incremental Game</title>
 </head>
 <body>
 
 <div id="game-container">
-  <h1>Astrum Umbra</h1>
-  <p>It aint much, but its dishonest work.</p>
-
-  <button onclick="stealApples()">Steal Apples</button>
-  <button onclick="sellApples()">Sell Apples</button>
-
-  <div id="inventory">Inventory: <span id="apple-count">0</span> apples, Gold: <span id="gold-count">0</span></div>
-  <div id="result"></div>
-
-  <script src="script.js"></script>
+  <h1>Incremental Game</h1>
+  <p>Points: <span id="points">0</span></p>
+  <button onclick="incrementPoints()">Click me!</button>
 </div>
 
+<div id="shop-container">
+  <h2>Shop</h2>
+  <div class="upgrade" onclick="buyUpgrade(10, 1)">Buy Upgrade (+1 point per click) - Cost: 10 points</div>
+  <div class="upgrade" onclick="buyUpgrade(20, 2)">Buy Upgrade (+2 points per click) - Cost: 20 points</div>
+  <!-- Add more upgrades as needed -->
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
