--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <p id="goldMined">0 Gold Mined</p>
     <button onclick="mineGold()">Mine Gold</button>
     <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
+     <button onclick="resetGame()">Reset Game</button>
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
