--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 
 <div id="game-container">
   <h1>Adventure Quest</h1>
-  <p>Welcome to the world of adventures! Choose your character class wisely.</p>
-  
-  <button onclick="chooseClass('warrior')" class="class-button">Choose Warrior</button>
-  <button onclick="chooseClass('mage')" class="class-button">Choose Mage</button>
-  <button onclick="chooseClass('rogue')" class="class-button">Choose Rogue</button>
-
+  <p id="story-text">Welcome to the world of adventures! Choose your character class wisely.</p>
+  <div id="choices-container"></div>
   <div id="result"></div>
 </div>
 
